--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"next": "^10.0.3",
+		"normalize.css": "^8.0.1",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1"
 	}
